--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,14 +1,14 @@
-name: Latest YouTube Videos
 
+name: Latest YouTube Videos
 on:
   schedule:
-    #corre cada hora
+    # Runs every hour
     - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
-  update-readme=with-youtube:
-    name: Actualiza el README con los ultimos videos de YouTube
+  update-readme-with-youtube:
+    name: Update this repo's README with latest videos from YouTube
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
